--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,4 +6,4 @@ jobs:
     name: Codeigniter build
     runs-on: ubuntu-18.04
     steps:
-      - uses: action/checkout@v1
+      - uses: actions/checkout@v1
