--- a/composer.json
+++ b/composer.json
@@ -1,43 +1,11 @@
 {
-	"name": "codeigniter4/framework",
-	"type": "project",
-	"description": "The CodeIgniter framework v4",
-	"homepage": "https://codeigniter.com",
-	"license": "MIT",
-	"require": {
-		"php": ">=7.2",
-		"ext-curl": "*",
-		"ext-intl": "*",
-		"ext-json": "*",
-		"ext-mbstring": "*",
-		"kint-php/kint": "^3.3",
-		"laminas/laminas-escaper": "^2.6",
-		"psr/log": "^1.1",
-		"pagseguro/pagseguro-php-sdk": "^6.0"
-	},
-	"require-dev": {
-		"codeigniter4/codeigniter4-standard": "^1.0",
-		"fzaninotto/faker": "^1.9@dev",
-		"mikey179/vfsstream": "1.6.*",
-		"phpunit/phpunit": "^8.5",
-		"predis/predis": "^1.1",
-		"squizlabs/php_codesniffer": "^3.3"
-	},
-	"autoload": {
-		"psr-4": {
-			"CodeIgniter\\": "system/"
-		}
-	},
-	"scripts": {
-		"post-update-cmd": [
-			"@composer dump-autoload",
-			"CodeIgniter\\ComposerScripts::postUpdate"
-		],
-		"test": "phpunit"
-	},
-	"support": {
-		"forum": "http://forum.codeigniter.com/",
-		"source": "https://github.com/codeigniter4/CodeIgniter4",
-		"slack": "https://codeigniterchat.slack.com"
-	}
+    "name": "vinic/pagseguro",
+    "description": "Projeto de integra\u0000\u0000o do codeigniter 4 com o Pagseguro",
+    "authors": [
+        {
+            "name": "Vinicius Santos da Silva",
+            "email": "vinicius.unisinos@hotmail.com"
+        }
+    ],
+    "require": {}
 }
