--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,11 @@
             "email": "vinicius.unisinos@hotmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "squizlabs/php_codesniffer": "^3.5",
+        "php": "^7.2.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5"
+    }
 }
