--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v1
-      - uses: ./.github/actions/composer
+      #- uses: ./.github/actions/composer
       - uses: ./.github/actions/build-app
       #- run: ./vendor/bin/phpunit
       #- run: ./vendor/bin/phpcs
