--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "require": {
         "squizlabs/php_codesniffer": "^3.5",
-        "php": "7.3.0"
+        "php": "^7.2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
