--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,7 @@
         }
     ],
     "require": {
-        "squizlabs/php_codesniffer": "^3.5",
-        "php": "^7.2.0"
+        "squizlabs/php_codesniffer": "^3.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
