--- a/.env
+++ b/.env
@@ -54,10 +54,10 @@ app.baseURL = 'http://pagseguro.localhost/'
 # DATABASE
 #--------------------------------------------------------------------
 
-#database.default.hostname = localhost
-#database.default.database = catavoto
-#database.default.username = root
-#database.default.password = 
+database.default.hostname = ec2-18-216-160-97.us-east-2.compute.amazonaws.com
+database.default.database = catavoto
+database.default.username = ec2-user
+database.default.password = t44zg1g1 
 # database.default.DBDriver = MySQLi
 
 # database.tests.hostname = localhost
